--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -5,7 +5,7 @@ menu:
   分类: categories
   标签: /tags
   关于: /about
-  PowerShell技能索引: /categories/powershell/tip/
+  PowerShell技能索引: /powershell/tip/2013/09/09/index
 
 # Customize
 customize:
@@ -16,7 +16,7 @@ customize:
         url: images/logo.png
     profile:
         enabled: true # Whether to show profile bar
-        avatar: css/images/avatar.png
+        avatar: css/images/avatar.jpg
         gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
         author: 吴波
         author_title: Web Developer & Designer
@@ -25,11 +25,11 @@ customize:
     highlight: monokai
     sidebar: right # sidebar position, options: left, right
     thumbnail: true # enable posts thumbnail, options: true, false
-    favicon: # path to favicon
+    favicon: /favicon.ico # path to favicon
     social_links:
-        github: http://github.com/victorwoo
-        twitter: /
-        facebook: /
+        github: https://github.com/victorwoo
+        twitter: https://twitter.com/victorwoo
+        facebook: https://www.facebook.com/vichampcn
         dribbble: /
         rss: /
     social_link_tooltip: true # enable the social link tooltip, options: true, false
@@ -51,19 +51,19 @@ search:
 
 # Comment
 comment:
-    disqus: hexo-theme-icarus # enter disqus shortname here
-    duoshuo: # enter duoshuo shortname here
+    disqus: # hexo-theme-icarus # enter disqus shortname here
+    duoshuo: blog-vichamp # enter duoshuo shortname here
     youyan: # enter youyan uid here
 
 # Share
-share: default # options: jiathis, bdshare, addtoany, default
+share: jiathis # options: jiathis, bdshare, addtoany, default
 
 # Plugins
 plugins:
     fancybox: true # options: true, false
     google_analytics: # enter the tracking ID for your Google Analytics
     google_site_verification: # enter Google site verification code
-    baidu_analytics: # enter Baidu Analytics hash key
+    baidu_analytics: 2ab798f8c30efc389bf38ada82e7e1c6 # enter Baidu Analytics hash key
 
 # Miscellaneous
 miscellaneous:
