fix avatar path.

--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -16,7 +16,7 @@ customize:
         url: images/logo.png
     profile:
         enabled: true # Whether to show profile bar
-        avatar: css/images/avatar.jpg
+        avatar: /img/avatar-300x300.jpg
         gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
         author: 吴波
         author_title: Web Developer & Designer
@@ -36,6 +36,7 @@ customize:
 
 # Widgets
 widgets:
+    - share
     - recent_posts
     - category
     - archive
