--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -5,7 +5,7 @@ menu:
   分类: categories
   标签: /tags
   关于: /about
-  PowerShell技能索引: /powershell/tip/2013/09/09/index
+  PowerShell技能索引: /2013/09/09/index
 
 # Customize
 customize:
