--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -31,7 +31,7 @@ customize:
         twitter: https://twitter.com/victorwoo
         facebook: https://www.facebook.com/vichampcn
         dribbble: /
-        rss: /
+        rss: /atom.xml
     social_link_tooltip: true # enable the social link tooltip, options: true, false
 
 # Widgets
