--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "hexo": "^3.2.0",
+    "hexo-clean-css": "0.0.2",
     "hexo-deployer-git": "^0.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
@@ -15,6 +16,7 @@
     "hexo-generator-json-content": "^2.1.3",
     "hexo-generator-minify": "^0.1.1",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-html-minifier": "0.0.1",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-stylus": "^0.3.1",
