(auto commit message)

--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ duoshuo_shortname: blog-vichamp
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: git
-  branch: coding-pages
-  repo: git@git.coding.net:victorwoo/victorwoo.git
+  branch: master
+  repo: git@github.com:victorwoo/victorwoo.github.io.git
 feed:
     type: atom
     path: atom.xml
