(auto commit message)

--- a/source/_posts/.vscode/settings.json
+++ b/source/_posts/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "python.pythonPath": "/usr/bin/python3",
     "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true
+    "python.linting.pylintEnabled": true,
+    "translatorHelper.api": "google-cn",
+    "commentTranslate.targetLanguage": "zh-CN"
 }
